# ailia-models

./: .gitattributes  .gitignore  ABOUT_AINYAN.md  LICENSE  README.md  TUTORIAL.md  TUTORIAL_jp.md  hello_ailia.ipynb  launcher.py  requirements.txt
3d-pose-baseline/: 3d-pose-baseline.py  (+1 more)
audio_processing/pyannote-audio/: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  FAQ.md  LICENSE  MANIFEST.in  README.md  codecov.yml  config.yaml  environment.yaml  faq.yml  main.py  overlapping_chunk_count.csv  pyannote-audio.py  python_segmentation.csv  python_segmentation_convert.csv  requirements.txt  reshape_segmentation_20.csv  segmentation.pt  segmentations0.csv  segmentations1.csv  setup.cfg  setup.py  small_centroids.csv  soft_clusters[0].csv  soft_clusters[1].csv  soft_clusters[2].csv  sorted_speakers.csv
audio_processing/pyannote-audio/.faq/: FAQ.md  suggest.md
audio_processing/pyannote-audio/.github/: FUNDING.yml
audio_processing/pyannote-audio/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
audio_processing/pyannote-audio/.github/workflows/: doc.yml  pypi.yml  test.yml  test_cli.yml
audio_processing/pyannote-audio/data/: demo_ground.rttm  sample.rttm  sample_ground.rttm
audio_processing/pyannote-audio/doc/: gen_docs.py  requirements.txt
audio_processing/pyannote-audio/doc/source/: index.rst
audio_processing/pyannote-audio/model/: config.yaml
audio_processing/pyannote-audio/notebook/: augmentation.ipynb  example.ipynb  freeze.ipynb  inference.ipynb  sharing.ipynb
audio_processing/pyannote-audio/pyannote/audio/: __init__.py
audio_processing/pyannote-audio/pyannote/core/: __init__.py  _version.py  annotation.py  feature.py  timeline.py
audio_processing/pyannote-audio/pyannote/database/: util.py
audio_processing/pyannote-audio/pyannote/metrics/: base.py  diarization.py  identification.py  matcher.py  types.py  utils.py
audio_processing/pyannote-audio/pyannote_audio_utils/: __init__.py
audio_processing/pyannote-audio/python_data/: centroids.json  discrete_diarization.json  embeddings.json  hard_clusters.json  python_chunks_1.json  python_chunks_21.json  python_map_with_specifications_1.json  python_segmentation.json  python_segmentation_1.json  segmentations.json  soft_clusters.json  speaker_count.json  waveform.json
audio_processing/pyannote-audio/questions/: bad_performance.question.md  from_memory.question.md  offline.question.md  pyannote.question.md  streaming.question.md
audio_processing/pyannote-audio/tests/: conftest.py  inference_test.py  io_test.py  test_cli.py  test_clustering.py  test_import_lib.py  test_metrics.py  test_run_notebooks.py  test_sample.py  test_stats_pool.py  test_train.py
audio_processing/pyannote-audio/tutorials/: MRE_template.ipynb  adapting_pretrained_pipeline.ipynb  add_your_own_model.ipynb  add_your_own_task.ipynb  applying_a_model.ipynb  applying_a_pipeline.ipynb  intro.ipynb  overlapped_speech_detection.ipynb  speaker_verification.ipynb  training_a_model.ipynb  training_with_cli.md  voice_activity_detection.ipynb
(+2785 files in other folders)
